--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   # Firebase dependencies (aligned versions)
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
+  firebase_app_check: ^0.3.2+4
   cloud_firestore: ^5.6.5
   firebase_storage: ^12.4.4
   firebase_database: ^11.3.4
